--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ main{
     border-radius: 15px;
     max-height: fit-content;
     max-width: fit-content;
+    box-shadow: 1px 1px 10px 2px #001f74;
 }
 legend{
     font-family: 'Poppins', sans-serif;
